--- a/css/style.css
+++ b/css/style.css
@@ -68,7 +68,8 @@ p{ text-indent: 4em; }
 .navigation li.active{ background: #313a42; }
 .navigation li a i{ margin-right: 24px; }
 #dowebok{ margin-left: 310px;}
-#dowebok .title{ font-size: 16px; margin-bottom: 30px; text-shadow: 2px 2px 3px #ccc; transition:1s all ease;}
+#dowebok .title{ font-size: 16px; margin-bottom: 30px; 
+  text-shadow: 2px 2px 3px #ccc; transition:1s all ease;}
 #dowebok .title:hover{ transform:translate(20%,0%); }
 #dowebok .title b{ font-weight: bold; }
 .banner-bg{ width: 1040px; height: 650px; 
@@ -92,7 +93,8 @@ p{ text-indent: 4em; }
 }
 .about-image img{ width: 100%; height: 540px; display: block; }
 .about-btn{ width: auto; position: absolute; 
- left: 45%; bottom: 30px; z-index: 2; }
+ left: 45%; bottom: 30px; z-index: 2; 
+}
 .about-btn li{ float: left; 
  width: 25px; height: 25px;
  margin-right: 5px; border-radius: 50px;
@@ -102,10 +104,18 @@ p{ text-indent: 4em; }
 .about-btn li.on{ background-color: #ccc; 
   opacity: 0.8; filter:alpha(opacity=80);  
 }
-.demo{ padding-top: 30px;  
+.about-but{ position: absolute; width: 33px; 
+ height: 54px; z-index: 999; 
+ text-align: center; cursor: pointer;
 }
-.demo-con{ margin-top: 40px; height: 444px; 
+.prev{ left: 4%; top: 40%; 
+  background: url(../image/arrows.png) no-repeat 0px 0px; 
 }
+.next{ right: 4%; top: 40%; 
+  background: url(../image/arrows.png) no-repeat -39px 0px; 
+}
+.demo{ padding-top: 30px; }
+.demo-con{ margin-top: 40px; height: 444px; }
 .demo-con li{ width: 290px; height: 220px; 
   float: left; margin-right: 2px; margin-bottom: 2px; 
   position: relative; overflow: hidden; 
@@ -128,9 +138,7 @@ p{ text-indent: 4em; }
 .demo-con span p{ text-indent: 0; font-size: 13px; 
   line-height: 20px; color: #fff;
 }
-.container{
-  width:650px; margin-left: 100px;
-}
+.container{ width:650px; margin-left: 100px; }
 .hextit{ margin-left: -100px; }
 .hextxt{ margin-bottom: 50px; margin-left: -100px; }
 .hex{width:150px; height:86px; background-color:#ccc;
@@ -143,7 +151,7 @@ p{ text-indent: 4em; }
 .hex:hover{ transform:rotate(360deg); 
   -webkit-transform:rotate(360deg)
 }
-.hex.hex-gap{ margin-left:86px;}
+.hex.hex-gap{ margin-left:86px; }
 .hex a { display:block; width:100%; height:100%;
   text-indent:-9999em; position:absolute; top:0; left:0;
 }
